<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_margin="32dp"
		android:text="XD"/>

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/button2"
		android:layout_margin="32dp"
		android:text="Button"/>

	<Button
		android:id="@+id/button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_margin="32dp"
		android:text="Button2"/>

	<Button
		android:id="@+id/requestButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@id/button2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toTopOf="@id/requestButton2"
		android:layout_margin="32dp"
		android:text="request"/>

	<Button
		android:id="@+id/requestButton2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toEndOf="@id/button2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_margin="32dp"
		android:text="request2"/>
</androidx.constraintlayout.widget.ConstraintLayout>